kubernetes-manifests/ms-agenda.yaml
# kubernetes-manifests/ms-agenda.yaml

# 1. Service (ClusterIP)
# Define el nombre del servicio interno para que otros microservicios puedan comunicarse con este.

apiVersion: v1
kind: Service
metadata:
  name: ms-agenda-service # Nombre del servicio, será el DNS interno
  labels:
    app: ms-agenda
spec:
  selector:
    app: ms-agenda 
  ports:
    - protocol: TCP
      port: 3002 # Puerto por el que el servicio es accesible
      targetPort: 3002 # Puerto en el contenedor
  type: ClusterIP 
---

# 2. Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-agenda-deployment
spec:
  replicas: 1 # Queremos una sola instancia de este servicio, para el momento de la resilencia
  selector:
    matchLabels:
      app: ms-agenda
  template:
    metadata:
      
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: ms-agenda 
    spec:
      # --- CORRECCIÓN CLAVE: containers está anidado correctamente bajo spec ---
      containers:
        - name: ms-agenda
          image: shel08/ms-agenda:1.0 # La imagen que publicaste
          imagePullPolicy: IfNotPresent # Añadido para evitar ErrImagePull si la imagen ya está en minikube/Docker.
          ports:
            - containerPort: 3002
