kubernetes-manifests/ms-usuarios.yaml
# kubernetes-manifests/ms-usuarios.yaml

# 1. Service (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: ms-usuarios-service
  labels:
    app: ms-usuarios
spec:
  selector:
    app: ms-usuarios
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP 
---

# 2. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-usuarios-deployment
spec:
  replicas: 1 # <-- Replicas 
  selector:
    matchLabels:
      app: ms-usuarios
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: ms-usuarios 
    spec:
      containers:
        - name: ms-usuarios
          image: shel08/ms-usuarios:1.1 
          imagePullPolicy: IfNotPresent
          resources: # <-- OPTIMIZACIÓN DE RECURSOS (RETO 01)
            requests:
              cpu: "250m"  # 0.25 vCPU
              memory: "128Mi"
            limits:
              cpu: "500m"  # Máximo 0.5 vCPU
              memory: "256Mi"
          ports:
            - containerPort: 3001
